--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+button {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: Arial, sans-serif;
     font-size: 15px;
@@ -20,7 +31,6 @@ body {
     background-position: center;
     background-position: center;
     padding: 100px 20px;
-    height: 30vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -45,6 +55,10 @@ header div {
     max-width: 1000px;
     margin: 0 auto;
 
+}
+
+.hambuger {
+    display: none;
 }
 
 ul {
@@ -104,18 +118,20 @@ section h2 {
     color: #f4f4f4;
     font-size: 28px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
-section p {
+body>div>div>section>p {
     color: #f4f4f4;
     font-size: 18px;
     line-height: 1.5;
+    text-align: center;
 }
 
 section * {
     margin: 0;
     padding: 0;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .services {
@@ -137,7 +153,7 @@ section * {
 
 .services input {
     height: 24px;
-    padding: 5px;
+    padding: 18px;
     margin-top: 10px;
 }
 
@@ -157,7 +173,7 @@ button:hover {
 .Help input[type="text"] {
     width: 100%;
     height: 24px;
-    padding: 5px;
+    padding: 15px;
 }
 
 .services-list {
@@ -285,6 +301,121 @@ label {
     flex: 1;
 }
 
+.hero {
+    background: #E8491D;
+    background: linear-gradient(354deg, rgba(232, 73, 29, 1) 0%, rgba(133, 69, 53, 1) 22%, rgba(90, 67, 63, 1) 31%, rgba(53, 66, 72, 1) 50%);
+    height: 60vh;
+    width: 100vw;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero h1 {
+    color: #f4f4f4;
+}
+
+.contain {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 2rem;
+    width: 80%;
+    margin-inline: auto;
+}
+
+.contact_container {
+    display: grid;
+    margin: 1rem;
+    padding: 1rem;
+    text-align: left;
+    font-size: 1rem;
+    font-weight: 80;
+    gap: 1rem;
+    grid-auto-columns: 1fr;
+    width: 100%;
+}
+
+.card-container * {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.contact_container i {
+    font-size: 1.5rem;
+}
+
+.contact p {
+    color: #333;
+}
+
+.contact_form {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 3rem;
+    padding: 3rem;
+    box-shadow: 0px 0px 10px lightgrey;
+    border-radius: 5px;
+}
+
+.title {
+    display: flex;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+input {
+    padding: 10px;
+    margin-top: 0.6rem;
+    margin-bottom: 0.6rem;
+}
+
+select {
+    padding: 10px;
+    margin-top: 0.6rem;
+}
+
+.send {
+    border-radius: 7px;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.view {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #35424a;
+    padding: 3rem 10rem;
+    height: 6vh;
+}
+
+.view i {
+    font-size: 1.5rem;
+    color: #e8491d;
+}
+
+.view a {
+    text-decoration: none;
+    color: white;
+}
+
+.view a :hover {
+    cursor: pointer;
+    color: #e8491d;
+}
+
+.view div {
+    border: 2px solid #e8491d;
+    border-radius: 6px;
+    padding: 0.6rem;
+
+}
+
+.map iframe {
+    width: 100vw;
+}
+
 /* mobile view css */
 @media screen and (max-width:768px) {
 
@@ -314,6 +445,19 @@ label {
     .card-container {
         grid-template-columns: 2fr;
     }
+
+    .contain {
+        grid-template-columns: 1fr 1fr;
+    }
+    .view {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        padding: 1rem;
+        height: 100%;
+        gap: 2rem;
+    }
 }
 
 @media screen and (max-width:480px) {
@@ -321,13 +465,43 @@ label {
         font-size: 20px;
     }
 
-    header nav ul {
+    header div {
+        display: flex;
+        justify-content: space-around;
+        align-items: left;
+        text-align: left;
+        flex-direction: row;
+    }
+
+    .hambuger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .nav-links {
+        left: 0;
+        display: none;
+        position: absolute;
+        background: #35424a9e;
+        backdrop-filter: blur(6px);
         flex-direction: column;
+        width: 100%;
+        padding: 1rem;
+        top: 93px;
+        /* align-content: center; */
         align-items: center;
+        
+    }
+
+   .nav-links.show {
+        display: flex;
     }
 
     header nav ul li {
         padding: 10px 0;
+        border-bottom: 2px solid rgba(255, 255, 255, 0.143);
+        width: 100%;
+        text-align: center;
     }
 
     .services>div {
@@ -342,5 +516,23 @@ label {
     .card-container {
         grid-template-columns: 1fr;
     }
-
+    .contain {
+        grid-template-columns: 1fr;
+    }
+    .contact_form {
+        margin: 0;
+        margin-bottom: 2rem;
+    }
+    .view {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        padding: 1rem;
+        height: 100%;
+        gap: 2rem;
+    }
+    .view div {
+        width: 80%;
+    }
 }
